@@ -44,6 +44,7 @@ check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
               test_copy_create.test \
               test_copy_delete.test \
+              test_copy_grouping.test \
               test_copy_list.test \
               test_delete.test \
               test_drive_list.test \
